Fixing couple of css missalignments

--- a/static/less/login.less
+++ b/static/less/login.less
@@ -32,6 +32,18 @@
       padding: 3px 3px;
       width: 150px;
     }
+
+    .text{
+      display: inline-block;
+      width: 80%;
+      float: left;
+      margin-top: 8px;
+    }
+    .letter{
+      width: 20%;
+      display: inline-block;
+      float: left;
+    }
   }
 
   .btn-facebook{
