--- a/static/less/register.less
+++ b/static/less/register.less
@@ -39,6 +39,10 @@
       @media (max-width: 768px) {
         padding: 15px;
         max-width: 100%;
+
+        .btn{
+          font-size: 90%;
+        }
       }
 
       .button-div{
